<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/pizza_img1"
                        android:layout_width="240dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/pizzaDesc"
                        app:srcCompat="@drawable/pizza1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pizza_title1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pizza_name"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/pizza_description1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pizza_description"
                            android:textSize="22sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="123dp"
                android:background="@color/light_gray"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/pizza_img2"
                        android:layout_width="240dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/pizzaDesc"
                        app:srcCompat="@drawable/pizza2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pizza_title2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pizza_name2"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/pizza_description2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pizza_description2"
                            android:textSize="22sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="246dp"
                android:background="@color/light_gray"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/pizza_img3"
                        android:layout_width="240dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/pizzaDesc"
                        app:srcCompat="@drawable/pizza3" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pizza_title3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pizza_name3"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/pizza_description3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pizza_description3"
                            android:textSize="22sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="369dp"
                android:background="@color/light_gray"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/pizza_img4"
                        android:layout_width="240dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/pizzaDesc"
                        app:srcCompat="@drawable/pizza4" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pizza_title4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pizza_name4"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/pizza_description4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pizza_description4"
                            android:textSize="22sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="492dp"
                android:background="@color/light_gray"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/pizza_img4"
                        android:layout_width="240dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/pizzaDesc"
                        app:srcCompat="@drawable/pizza1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pizza_title4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pizza_name"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/pizza_description4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pizza_description"
                            android:textSize="22sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>